--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,11 +38,12 @@
     margin: 11px 0 0 0;
     box-shadow: 0px 5px 9px 1px #8080807a;
     border-radius: 11px;
+    background-color: white;
     input{
     border: none;
     width: 80%;
     height: auto;
-
+    outline: none;
     }
 }
 .cover{
@@ -52,7 +53,7 @@
     border-bottom: 25px;
     .suggestions{
         height: 32px;
-        width: 32%;
+        // width: 32%;
         display: flex;
         align-items: center;
         font-size: 13px;
